namespace BlazorApp.Entities;

public class CreateLanguageDto
{
    public string Code { get; set; } = string.Empty;
    public string Name { get; set; } = string.Empty;
}