using System;

namespace Entities;

public class Role
{
    public string RoleName { set; get; }
}
